5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/3094/executions/1822_3184.log
== TEST (2019-06-13 11:19:15) 
-- CODE:
from numpy import *

vet = array(eval(input("bcjeuj: ")))
for i in range (vet):
	aux = v[0]
	v[0] = v[-1]
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:19:37) 
-- CODE:
from numpy import *

vet = array(eval(input("bcjeuj: ")))
for i in range (vet):
	aux = v[0]
	v[0] = v[-1]
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:20:13) 
-- CODE:
from numpy import *

vet = array(eval(input("bcjeuj: ")))
for i in range (vet):
	aux = v[0]
	v[0] = v[-1]
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:32:33) 
-- CODE:
from numpy import *

vet = array(eval(input("bcjeuj: ")))
for i in vet:
	[aux] = vet[0]
	vet[0] = vet[-1]
	vet[-1]= [aux]
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:33:04) 
-- CODE:
from numpy import *

vet = array(eval(input("bcjeuj: ")))
for i in vet:
	aux = vet[0]
	vet[0] = vet[-1]
	vet[-1]= aux
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:34:16) 
-- CODE:
from numpy import *

vet = array(eval(input("bcjeuj: ")))
for i in vet:
	aux = i[0]
	i[0] = i[-1]
	i[-1]= aux
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:35:40) 
-- CODE:
from numpy import *

vet = array(eval(input("bcjeuj: ")))
for i in range(vet):
	aux = vet[0]
	vet[0] = vet[-1]
	vet[-1]= aux
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:46:47) 
-- CODE:
from numpy import *

vet = array(eval(input("bcjeuj: ")))
for i in vet:
	[0]=aux
	[0]=[-1]
	[-1]=aux
print(vet)
-- ERROR:
File "XXXX", line 5
    [0]=aux
    ^
SyntaxError: can't assign to literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:47:03) 
-- CODE:
from numpy import *

vet = array(eval(input("bcjeuj: ")))
for i in vet:
	i[0]=aux
	i[0]=i[-1]
	i[-1]=aux
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:47:58) 
-- CODE:
from numpy import *

vet = array(eval(input("bcjeuj: ")))
for i in vet:
	i[0]=i[-1]
	#i[0]=i[-1]
	i[-1]=i[0]
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 11:51:56) 
-- CODE:
from numpy import *

vet = array(eval(input("bcjeuj: ")))
for i in vet:
	aux = 0
	[i]max= aux
	[i]min = [i]max
print(vet)
-- ERROR:
File "XXXX", line 6
    [i]max= aux
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 11:53:17) 
-- CODE:
from numpy import *

vet = array(eval(input("bcjeuj: ")))
for i in vet:
	aux = 0
	[i]max= aux
	[i]min = [i]max
print(vet)
-- EXECUTION TIME:
0.793389
-- ERROR:
  File "/home/codebench/codes/1822/3184/main.py", line 6
    [i]max= aux
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
